<resources>
    <string name="app_name">Tapglue</string>
    <string name="login">LOGIN</string>
    <string name="toast_networkerror">Network error</string>
    <string name="menu_news">News</string>
    <string name="send">SEND</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="photo">Photo</string>
    <string name="post">POST</string>
    <string name="menu_friends">FRIENDS</string>
    <string name="add_friend">Add friend</string>
    <string name="request">Pending requests</string>
    <string name="search_friend">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_posts">POSTS</string>
    <string name="toast_loggedout">User successfully logged out</string>
    <string name="toast_no_news">No news for current user</string>
    <string name="toast_no_posts">No posts from current user</string>
    <string name="menu_profile">Edit profile</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="toast_no_comments">No comments for this post</string>
    <string name="enter_image_url">Enter image url</string>
    <string name="cancel">Cancel</string>
    <string name="image">Image</string>
    <string name="register">Register new</string>
    <string name="password">PASSWORD</string>
    <string name="logo">Logo</string>
    <string name="attach_image">Attached Image</string>
    <string name="attach">Attach</string>
    <string name="add">Add</string>
    <string name="friends">Friends</string>
</resources>
