<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_post" android:layout_gravity="right" android:inputType="text"
            android:layout_toStartOf="@+id/attach_button"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:id="@+id/button_post" android:layout_alignParentEnd="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_image" android:layout_below="@+id/edit_post" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:contentDescription="@string/attach_image"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attach_button"
            android:src="@drawable/attachment" android:layout_toStartOf="@id/button_post"
            android:contentDescription="@string/attach"/>
</RelativeLayout>