<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".RequestActivity" android:background="@drawable/main_background"
              android:paddingLeft="5dp" android:paddingRight="5dp">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_gravity="center_horizontal" android:src="@drawable/logo"
            android:contentDescription="@string/logo" android:paddingTop="30dp" android:paddingBottom="30dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical"
            android:background="@drawable/posts_background" android:paddingBottom="20dp" android:paddingTop="20dp"
    >
        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/login"
                android:inputType="text"
                android:layout_gravity="center_horizontal" android:hint="@string/login"/>
        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/createnew_cb"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:onClick="onLoginClick"
                android:id="@+id/button"
                android:background="@color/button" android:layout_gravity="center_horizontal"
        />
    </LinearLayout>
</LinearLayout>

