<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true">

    <include android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/toolbar"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userphoto" android:src="@drawable/userpic" android:contentDescription="@string/photo"
            android:padding="10dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="10dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/friends_count" android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_weight="1" android:gravity="center" android:padding="10dp"
                android:background="@drawable/posts_background"/>
    </LinearLayout>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingLeft="20dp" android:paddingRight="20dp"
            android:weightSum="2" android:paddingTop="20dp">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/username"
                    android:id="@+id/username_text" android:layout_weight="1" android:singleLine="false"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_edit"
                    android:inputType="text" android:enabled="false" android:layout_weight="10"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/firstname"
                      android:id="@+id/textView" android:layout_weight="1"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/firstname_edit"
                      android:inputType="text" android:enabled="false" android:layout_weight="10"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/lastname"
                      android:id="@+id/textView2" android:layout_weight="1"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/lastname_edit"
                      android:inputType="text" android:enabled="false" android:layout_weight="10"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/email"
                      android:id="@+id/textView4" android:layout_weight="1"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/email_edit"
                      android:inputType="text" android:enabled="false" android:layout_weight="10"/>
        </TableRow>
    </TableLayout>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/edit_button" android:background="@color/button" android:layout_gravity="center_horizontal"/>
</LinearLayout>