<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:columnCount="23" android:rowCount="19"
            android:background="@drawable/posts_background" android:elevation="4dp"
            android:padding="@dimen/event_padding">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="80dp" android:layout_column="0" android:layout_row="0" android:layout_rowSpan="2">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_pic"
                android:contentDescription="@string/photo" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name" android:layout_row="0" android:layout_rowSpan="1" android:layout_column="1"
            android:layout_columnSpan="2" android:paddingLeft="@dimen/text_padding"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_date" android:layout_row="1" android:layout_column="1" android:layout_columnSpan="2"
            android:paddingLeft="@dimen/text_padding"
            android:paddingTop="10dp" android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_text" android:layout_row="2" android:layout_column="0" android:layout_columnSpan="3"
            android:elegantTextHeight="false"
            android:paddingBottom="@dimen/text_padding"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:paddingTop="@dimen/text_padding"
            android:paddingLeft="10dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic_attachment" android:layout_row="3" android:layout_column="0"
            android:layout_columnSpan="3" android:contentDescription="@string/attach_image"
            android:layout_gravity="center_horizontal"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/event_action_bar" android:layout_row="4"
            android:layout_column="0" android:layout_columnSpan="3" android:weightSum="3">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_weight="1">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/button_like" android:src="@drawable/ic_favorite_black_36dp"
                    android:contentDescription="@string/like"
                    android:background="@android:color/transparent" android:tint="@color/comment_tools_tilt"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_likes" android:layout_gravity="bottom"/>
        </LinearLayout>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/button_comment" android:src="@drawable/ic_comment_black_36dp"
                android:contentDescription="@string/comment" android:background="@android:color/transparent"
                android:tint="@color/comment_tools_tilt" android:layout_weight="1"/>
    </LinearLayout>
</GridLayout>